--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ os: linux
 services:
   - docker
 
-arch: 
-  - arm64
-  - amd64
 dist: bionic
 language: minimal
 jobs:
   include:
     - stage: build
+      arch: amd64
+      script: ./.ci/build.sh
+    - stage: build
+      arch: arm64
       script: ./.ci/build.sh
     - stage: e2e-test
       install: ./.ci/e2e-test/setup.sh
@@ -22,5 +23,20 @@ jobs:
         - MINIKUBE_HOME=$HOME
         - CHANGE_MINIKUBE_NONE_USER=true
         - KUBECONFIG=$HOME/.kube/config
+    - stage: e2e-test
+      arch: arm64
+      install: ./.ci/e2e-test/setup.sh
+      if: tag IS present OR commit_message =~ /perform-e2e/
+      script: ./.ci/e2e-test/test.sh
+      env:
+        - CHANGE_MINIKUBE_NONE_USER=true
+        - MINIKUBE_WANTUPDATENOTIFICATION=false
+        - MINIKUBE_WANTREPORTERRORPROMPT=false
+        - MINIKUBE_HOME=$HOME
+        - CHANGE_MINIKUBE_NONE_USER=true
+        - KUBECONFIG=$HOME/.kube/config
     - stage: publish
+      script: ./.ci/publish.sh
+    - stage: publish
+      arch: arm64
       script: ./.ci/publish.sh
